# librime-rust

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  rime.rs  rime_api.rs
src/rime/: algo.rs  candidate.rs  commit_history.rs  common.rs  component.rs  composition.rs  config.rs  context.rs  deployer.rs  dict.rs  filter.rs  key_event.rs  key_table.rs  language.rs  menu.rs  messenger.rs  mod.rs  registry.rs  resource.rs  segmentation.rs  service.rs  translation.rs
src/rime/algo/: algebra.rs  calculus.rs  encoder.rs  spelling.rs  syllabifier.rs  utilities.rs
src/rime/algo/calculus/: abbreviation.rs  calculation.rs  derivation.rs  erasure.rs  fuzzing.rs  transformation.rs  transliteration.rs
src/rime/config/: config_component.rs  config_data.rs  config_types.rs
src/rime/dict/: corrector.rs  db.rs  db_utils.rs  dict_settings.rs  mapped_file.rs  prism.rs  string_table.rs  table.rs  text_db.rs  tsv.rs  user_db.rs  vocabulary.rs
tests/: algebra_test.rs  calculus_test.rs  corrector_test.rs  key_event_test.rs  key_table_test.rs  prism_test.rs  syllabifier_test.rs  table_test.rs  user_db_test.rs
tests/commons/: mod.rs
