[package]
name = "librime-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
regex = "1.10"
yaml-rust2 = "0.8"
hashlink = "0.8"
crc32fast = "1.4"
signals2 = "0.3"
env_logger = "0.11"
x11 = "2.21.0"
memmap2 = "0.9"
darts = "0.1"